--- a/public_html/blockland/index.html
+++ b/public_html/blockland/index.html
@@ -33,80 +33,10 @@
 			margin: 0px;
 			overflow: hidden;
 		}
-
-		#message {
-			position: absolute;
-			left: 50%;
-			top: 50%;
-			transform: translateX(-50%) translateY(-50%);
-			font-family: 'Kavivanar', san-serif;
-			font-size: 40px;
-			width: 80%;
-			max-width: 280px;
-			padding: 15px 15px 50px 15px;
-			text-align: center;
-			display: none;
-			align-content: center;
-			justify-content: center;
-			background-color: aliceblue;
-			border: medium solid #3D455C;
-			border-radius: 20px;
-			color: #3D455C;
-			z-index: 99;
-		}
-
-		#message_ok {
-			position: absolute;
-			bottom: 10px;
-			padding: 10px 20px 10px 20px;
-			font-family: sans-serif;
-			font-size: 20px;
-			background-color: #3D455C;
-			color: #fff;
-			border-radius: 8px;
-			border: medium solid #696882;
-		}
-
-		#chat {
-			position: absolute;
-			width: 100%;
-			height: 40px;
-			bottom: -40px;
-			transition: all 0.5s;
-		}
-
-		form {
-			background: #000;
-			padding: 3px;
-			width: 100%;
-		}
-
-		form input {
-			border: 0;
-			padding: 10px;
-			width: 88%;
-			margin-right: .5%;
-		}
-
-		form button {
-			width: 8%;
-			background: rgb(130, 224, 255);
-			border: none;
-			padding: 10px;
-		}
 	</style>
 </head>
 
 <body>
-	<div id="message">
-		<p id="message_text"></p>
-		<button id="message_ok">OK</button>
-	</div>
-	<div id="chat">
-		<form id="msg-form" action="">
-			<input id="m" autocomplete="off" /><button>Send</button>
-		</form>
-	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/92/three.min.js"></script>
 	<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
@@ -140,49 +70,42 @@
 	<script src="ChatHide.js"></script>
 	<script src="Users.js"></script>
 
-	<!-- <div>
-			<audio id="audio">
-				<source src="./assets/sound/bensound-ukulele.mp3" type="audio/mp3">
-			</audio>
-			<button>Play</button>
-		</div> -->
-	<!-- <div id="overlay">
-		<button id="startButton">Play</button>
-	</div> -->
 	<!-- <video width="800px" height="600px" src="./assets/video/Beach - 79773.mp4" controls autoplay muted loop playsinline style="display: none;"></video> -->
 	<!-- 공유가능한 동영상 로드 -->
-		<!-- <section id="iframe">
+	<!-- <section id="iframe">
 			<iframe src="https://www.youtube.com/embed/AbxbOd_mtn8?rel=0&amp;autoplay=1&mute=1&amp;loop=1;" title="YouTube video player"?rel=0 style="display: none;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</section> -->
-	<!-- (muted / autoplay) = 크롬에서 2개가 같이 필수로 넣어야함 / loop 필수 -->
-	<video id="video" loop="" muted crossOrigin="anonymous" playsinline="" autoplay style="display: none;">
-		<source src="./assets/video/leekyungu.mp4" type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'></video>
-	<video id="video1" loop="" muted crossOrigin="anonymous" playsinline="" autoplay style="display: none;">
-		<source src="./assets/video/production ID_500787.mp4" type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'></video>
+	<!-- (autoplay) = 크롬에서 2개가 같이 필수로 넣어야함 / loop 필수 -->
+	<video id="video" loop="" crossOrigin="anonymous" playsinline="" autoplay style="display: none;" controls>
+		<source src="./assets/video/leekyungun.mp4" type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'>
+	</video>
+	<video id="video1" loop="" crossOrigin="anonymous" playsinline="" autoplay style="display: none;" controls>
+		<source src="./assets/video/production ID_5007874.mp4" type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'>
+	</video>
 	<video id="webcam" style="display:none" autoplay playsinline></video>
-	
+
 	<!-- 사이드 바 -->
 	<div class="navigation">
 		<div class="bit">
-			<li>Bit Holic</li>
+			<a href=""><img src="assets/images/logo.png" width="50" height="50"/> Bit Occasion </a>
 		</div>
 		<div class="connect-users">
 			<span class="icon"><i class='fas fa-user-alt'> Connect </i></span>
-			<span id="users"></span>
+			<span id="users" type="text" readonly></span>
 		</div>
 		<ul>
-			<li>
+			<!-- <li>
 				<button class="btn">
 					<span class="icon"><i class='fas fa-home'></i></span>
 					<span class="title">Home</span>
 				</button>
-			</li>
-			<li>
+			</li> -->
+			<!-- <li>
 				<button class="btn">
 					<span class="icon"><i class='fas fa-user-alt'></i></span>
 					<span class="title">Profile</span>
 				</button>
-			</li>
+			</li> -->
 			<li>
 				<button class="btn" onclick="show_hide()">
 					<span class="icon"><i class='fas fa-comment-alt'></i></span>
@@ -195,12 +118,12 @@
 					<span class="title">Help</span>
 				</button>
 			</li>
-			<li>
+			<!-- <li>
 				<button class="btn">
 					<span class="icon"><i class='fas fa-cog'></i></span>
 					<span class="title">Setting</span>
 				</button>
-			</li>
+			</li> -->
 			<li>
 				<button class="btn">
 					<span class="icon"><i class='fas fa-sign-out-alt'></i></span>
@@ -209,37 +132,29 @@
 			</li>
 		</ul>
 	</div>
-	<!-- 사이드바 안에 채팅창 -->
-	<div class="chat-container">
-		<header class="chat-header">
-			<h1><i class="fas fa-smile"></i> BIT Occasion </h1>
-			<a href="index.html" class="btn">Leave Room</a>
-		</header>
-		<main class="chat-main">
-			<div class="chat-sidebar">
-				<h3><i class="fas fa-comments"></i> Room Name </h3>
-				<h2 id="room-name"></h2>
-				<h3><i class="fas fa-users"></i> Users </h3>
-				<ul id="users"></ul>
-			</div>
-			<div class="chat-messages"></div>
-		</main>
-		<div class="chat-form-container">
-			<form id="chat-form">
-				<input id="msg" type="text" placeholder="Enter Message" required autocomplete="off" />
-				<button class="btn"><i class="fas fa-paper-plane"></i> Send</button>
-			</form>
+	<!-- 여기는 새로운 채팅창 style="display: none;" -->
+	<div class="chat_main">
+			<span id="nav_title"> Chat </span>
+		<div>
+			<textarea id="chatLog" class="chat_log" readonly></textarea>
+		</div>
+		<form id="chat">
+			<input id="name" class="name" type="text" readonly>
+			<input id="message_send" class="message_send" type="text">
+			<input type="button" class="chat" value="OK" />
+		</form>
+		<div id="box" class="box">
 		</div>
 	</div>
 	<!-- 사이드바 이벤트 -->
 	<div class="toggle" onclick="toggleMenu()"></div>
 	<script type="text/javascript">
-			function toggleMenu() {
-				let navigation = document.querySelector('.navigation');
-				let toggle = document.querySelector('.toggle');
-				navigation.classList.toggle('active');
-				toggle.classList.toggle('active');
-			}
+		function toggleMenu() {
+			let navigation = document.querySelector('.navigation');
+			let toggle = document.querySelector('.toggle');
+			navigation.classList.toggle('active');
+			toggle.classList.toggle('active');
+		}
 	</script>
 	<!-- 닉네임 입력창 -->
 	<div class="create-nick" style="width: 100%; height: 100%; vertical-align: middle;">
@@ -264,8 +179,7 @@
 			*/
 			users = new Users(UserNick);
 
-			game = new Game(), player = new Player(),
-				playerlocal = new Playerlocal(), speechbubble = new SpeechBubble()
+			game = new Game(UserNick)
 			// document.addEventListener("DOMContentLoaded", function(){ game = new Game(UserModel); });
 		});
 	</script>
