--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -19,14 +19,14 @@
   </div>
   <div class="container">
     <div class="header">
-      <h1><a href="#">Bit Holic</a></h1>
+      <h1><a href="#">Bit Occasion</a></h1>
       <div class="nav">
         <ul>
-          <li><a href="https://niksgames.com/blockland/">Home</a></li>
-          <li><a href="#">Introduce</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Join Us</a></li>
-          <li><a href="#">Login</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="http://127.0.0.1:5500/galleryPage_in_web/index.html">Gallery</a></li>
+          <li><a href="http://127.0.0.1:5500/aboutUs_in_web/index.html">About Us</a></li>
+          <!-- <li><a href="#">Join Us</a></li> -->
+          <!-- <li><a href="#">Login</a></li> -->
         </ul>
       </div>
     </div>
