--- a/aboutUs_in_web/index.html
+++ b/aboutUs_in_web/index.html
@@ -40,7 +40,7 @@
             </li>
             <li class="team-item">
                 <div class="profile profile_green">
-                    <img src="/aboutUs_in_web/image/4.jpg">
+                    <img src="/aboutUs_in_web/image/Bin.jpg">
                     <div class="profile-contents">
                         <h2>Bin<span>Front-End / Web</span></h2>
                         <p>
@@ -50,8 +50,8 @@
                 </div>
             </li>
             <li class="team-item">
-                <div class="profile profile_purple">
-                    <img src="/aboutUs_in_web/image/2.jpg">
+                <div class="profile profile_pink">
+                    <img src="/aboutUs_in_web/image/Spike.jpg">
                     <div class="profile-contents">
                         <h2>Spike<span>Front-End / </span></h2>
                         <p>
@@ -62,11 +62,11 @@
             </li>
             <li class="team-item">
                 <div class="profile profile_purple">
-                    <img src="/aboutUs_in_web/image/2.jpg">
+                    <img src="/aboutUs_in_web/image/Michael.jpg">
                     <div class="profile-contents">
-                        <h2>Michale<span>Mento</span></h2>
+                        <h2>Michael<span>Mento</span></h2>
                         <p>
-                            Hi. Everyone. I'm Spike
+                            Hi. Everyone. I'm Michael
                         </p>
                     </div>
                 </div>
