--- a/galleryPage_in_web/index.html
+++ b/galleryPage_in_web/index.html
@@ -46,7 +46,7 @@
         <h1><a href="http://127.0.0.1:5500/Webpage/index.html">Bit Occasion</a></h1>
     </div>
     <div class="box">
-        <div style="--v: 1;"><img src="image/1.jpg"></div>
+        <div style="--v: 1;"><img src="image/211012_19404_runnersushi2.jpg"></div>
         <div style="--v: 2;"><img src="image/2.jpg"></div>
         <div style="--v: 3;"><img src="image/3.jpg"></div>
         <div style="--v: 4;"><img src="image/4.jpg"></div>
