--- a/galleryPage_in_web/index.html
+++ b/galleryPage_in_web/index.html
@@ -47,28 +47,30 @@
     </div>
     <div class="box">
         <div style="--v: 1;"><img src="image/211012_19404_runnersushi2.jpg"></div>
-        <div style="--v: 2;"><img src="image/2.jpg"></div>
-        <div style="--v: 3;"><img src="image/3.jpg"></div>
-        <div style="--v: 4;"><img src="image/4.jpg"></div>
-        <div style="--v: 5;"><img src="image/5.jpg"></div>
-        <div style="--v: 6;"><img src="image/6.jpg"></div>
-        <div style="--v: 7;"><img src="image/7.jpg"></div>
-        <div style="--v: 8;"><img src="image/8.jpg"></div>
-        <div style="--v: 9;"><img src="image/8.jpg"></div>
-        <div style="--v: 10;"><img src="image/8.jpg"></div>
-        <div style="--v: 11;"><img src="image/8.jpg"></div>
-        <div style="--v: 12;"><img src="image/8.jpg"></div>
-        <div style="--v: 13;"><img src="image/8.jpg"></div>
-        <div style="--v: 14;"><img src="image/8.jpg"></div>
-        <div style="--v: 15;"><img src="image/8.jpg"></div>
-        <div style="--v: 16;"><img src="image/8.jpg"></div>
-        <div style="--v: 17;"><img src="image/8.jpg"></div>
-        <div style="--v: 18;"><img src="image/8.jpg"></div>
-        <div style="--v: 19;"><img src="image/8.jpg"></div>
-        <div style="--v: 20;"><img src="image/8.jpg"></div>
-        <div style="--v: 21;"><img src="image/8.jpg"></div>
-        <div style="--v: 22;"><img src="image/8.jpg"></div>
-        <div style="--v: 23;"><img src="image/8.jpg"></div>
+        <div style="--v: 2;"><img src="image/KakaoTalk_20211016_001700973_01.jpg"></div>
+        <div style="--v: 3;"><img src="image/KakaoTalk_20211016_001700973_03.jpg"></div>
+        <div style="--v: 4;"><img src="image/KakaoTalk_20211016_001700973_04.jpg"></div>
+        <div style="--v: 5;"><img src="image/KakaoTalk_20211016_001700973_05.jpg"></div>
+        <div style="--v: 6;"><img src="image/KakaoTalk_20211016_001929383_01.jpg"></div>
+        <div style="--v: 7;"><img src="image/KakaoTalk_20211016_001929383_07.jpg"></div>
+        <div style="--v: 8;"><img src="image/KakaoTalk_20211016_001929383_11.jpg"></div>
+        <div style="--v: 9;"><img src="image/KakaoTalk_20211016_001929383_12.jpg"></div>
+        <div style="--v: 10;"><img src="image/KakaoTalk_20211016_001929383_13.jpg"></div>
+        <div style="--v: 11;"><img src="image/KakaoTalk_20211016_001929383_14.jpg"></div>
+        <div style="--v: 12;"><img src="image/KakaoTalk_20211016_002738580_16.jpg"></div>
+        <div style="--v: 13;"><img src="image/KakaoTalk_20211016_001929383_16.jpg"></div>
+        <div style="--v: 14;"><img src="image/KakaoTalk_20211016_002738580_10.jpg"></div>
+        <div style="--v: 15;"><img src="image/KakaoTalk_20211016_002738580_05.jpg"></div>
+        <div style="--v: 16;"><img src="image/KakaoTalk_20211016_002407243.jpg"></div>
+        <div style="--v: 17;"><img src="image/KakaoTalk_20211016_002415132.jpg"></div>
+        <div style="--v: 18;"><img src="image/KakaoTalk_20211016_002604855.jpg"></div>
+        <div style="--v: 19;"><img src="image/KakaoTalk_20211016_002419924.jpg"></div>
+        <div style="--v: 20;"><img src="image/KakaoTalk_20211016_003251465_01.jpg"></div>
+        <div style="--v: 21;"><img src="image/KakaoTalk_20211016_003251465.jpg"></div>
+        <div style="--v: 22;"><img src="image/KakaoTalk_20211016_003333363.jpg"></div>
+        <div style="--v: 23;"><img src="image/KakaoTalk_20211016_003606372.jpg"></div>
+        <div style="--v: 24;"><img src="image/KakaoTalk_20211016_002301987.jpg"></div>
+        <!-- <div style="--v: 23;"><img src="image/8.jpg"></div> -->
     </div>
 </body>
 
