--- a/aboutUs_in_web/index.html
+++ b/aboutUs_in_web/index.html
@@ -29,7 +29,7 @@
             </li>
             <li class="team-item">
                 <div class="profile profile_beige">
-                    <img src="/aboutUs_in_web/image/1.jpg">
+                    <img src="/aboutUs_in_web/image/Ryn.jpg">
                     <div class="profile-contents">
                         <h2>Ryn<span>Back-End / Server</span></h2>
                         <p>
