--- a/public_html/blockland/index.html
+++ b/public_html/blockland/index.html
@@ -80,16 +80,16 @@
 		</section> -->
 	<!-- (autoplay) = 크롬에서 2개가 같이 필수로 넣어야함 / loop 필수 -->
 	<video id="video" loop="" crossOrigin="anonymous" playsinline="" autoplay style="display: none;" controls>
-		<source src="./assets/video/leekyungun.mp4" type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'>
+		<source src="./assets/video/leekyungu.mp4" type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'>
 	</video>
 	<video id="video1" loop="" crossOrigin="anonymous" playsinline="" autoplay style="display: none;" controls>
-		<source src="./assets/video/production ID_5007874.mp4" type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'>
+		<source src="./assets/video/production ID_500787.mp4" type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'>
 	</video>
 
 	<!-- 사이드 바 -->
 	<div class="navigation">
 		<div class="bit">
-			<a href="http://127.0.0.1:5500/Webpage/index.html"><img src="assets/images/logo.png" width="50"
+			<a href="/web"><img src="assets/images/logo.png" width="50"
 					height="50" /> Bit Occasion </a>
 		</div>
 		<div class="connect-users">
