--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -19,12 +19,12 @@
   </div>
   <div class="container">
     <div class="header">
-      <h1><a href="#">Bit Occasion</a></h1>
+      <h1><a href="/web">Bit Occasion</a></h1>
       <div class="nav">
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="http://127.0.0.1:5500/galleryPage_in_web/index.html">Gallery</a></li>
-          <li><a href="http://127.0.0.1:5500/aboutUs_in_web/index.html">About Us</a></li>
+          <li><a href="/webgallery">Gallery</a></li>
+          <li><a href="/webus">About Us</a></li>
           <!-- <li><a href="#">Join Us</a></li> -->
           <!-- <li><a href="#">Login</a></li> -->
         </ul>
@@ -32,7 +32,7 @@
     </div>
     
     <div id="next">
-      <a href="http://192.168.0.16:2002/">Play</a>
+      <a href="/">Play</a>
     </div>
   </div>
 
