--- a/aboutUs_in_web/index.html
+++ b/aboutUs_in_web/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1><a href="http://127.0.0.1:5500/Webpage/index.html">Bit Occasion</a></h1>
+        <h1><a href="/web">Bit Occasion</a></h1>
         <div class="nav">
             <ul>
-              <li><a href="http://127.0.0.1:5500/galleryPage_in_web/index.html">Gallery</a></li>
+              <li><a href="/webgallery">Gallery</a></li>
             </ul>
           </div>
         <ul class="team">
             <li class="team-item">
                 <div class="profile profile_red">
-                    <img src="/aboutUs_in_web/image/Levi.jpg">
+                    <img src="./image/Levi.jpg">
                     <div class="profile-contents">
                         <h2>Levi <span>Team Leader / Back-End</span></h2>
                         <p>
@@ -29,7 +29,7 @@
             </li>
             <li class="team-item">
                 <div class="profile profile_beige">
-                    <img src="/aboutUs_in_web/image/Ryn.jpg">
+                    <img src="./image/Ryn.jpg">
                     <div class="profile-contents">
                         <h2>Ryn<span>Back-End / Server</span></h2>
                         <p>
@@ -40,7 +40,7 @@
             </li>
             <li class="team-item">
                 <div class="profile profile_green">
-                    <img src="/aboutUs_in_web/image/Bin.jpg">
+                    <img src="./image/Bin.jpg">
                     <div class="profile-contents">
                         <h2>Bin<span>Front-End / Web</span></h2>
                         <p>
@@ -51,7 +51,7 @@
             </li>
             <li class="team-item">
                 <div class="profile profile_pink">
-                    <img src="/aboutUs_in_web/image/Spike.jpg">
+                    <img src="./image/Spike.jpg">
                     <div class="profile-contents">
                         <h2>Spike<span>Front-End / </span></h2>
                         <p>
@@ -62,7 +62,7 @@
             </li>
             <li class="team-item">
                 <div class="profile profile_purple">
-                    <img src="/aboutUs_in_web/image/Michael.jpg">
+                    <img src="./image/Michael.jpg">
                     <div class="profile-contents">
                         <h2>Michael<span>Mento</span></h2>
                         <p>
