--- a/galleryPage_in_web/index.html
+++ b/galleryPage_in_web/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="nav">
         <ul>
-          <li><a href="http://127.0.0.1:5500/aboutUs_in_web/index.html">About Us</a></li>
+          <li><a href="/webus">About Us</a></li>
         </ul>
       </div>
     <div class="text">
@@ -43,7 +43,7 @@
     </div>
     </div>
     <div class="home">
-        <h1><a href="http://127.0.0.1:5500/Webpage/index.html">Bit Occasion</a></h1>
+        <h1><a href="/web">Bit Occasion</a></h1>
     </div>
     <div class="box">
         <div style="--v: 1;"><img src="image/211012_19404_runnersushi2.jpg"></div>
